[metadata]
name = oleeditor
version = 1.0.0a1
description = An OLE structed storage file editor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ole editor
platform = any
url = https://github.com/timxx/oleeditor
author = Weitian Leung
author_email = weitianleung@gmail.com
license = MIT
license-file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3

[options]
install_requires =
    PySide2
    olefile
python_requires = >=3
packages = oleeditor

[options.entry_points]
gui_scripts =
    oleeditor = oleeditor.main:main
